feat(css&about) new info a features for css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pablo Garrido</title>
+    <link rel="icon" href="assets/Picon.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/sidebar.css">
     <link rel="stylesheet" href="../css/carts.css">
@@ -16,7 +17,7 @@
     <div class="main-container">
         <aside class="sidebar">
             <h1>Pablo Garrido</h1>
-            <h2>Data Analyst Consultant</h2>
+            <h2>Technology Consultant</h2>
             <p>I build accessible, data experiences for the enterprises.</p>
 
             <nav>
@@ -29,7 +30,7 @@
 
             <div class="social-links">
                 <a href="https://github.com/PablomxH" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
-                <a href="https://www.linkedin.com/in/pablo-garrido-hern%C3%A1ndez-067b90233/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/pablo-garrido-067b90233/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i></a>
                 <a href="#"><i class="fab fa-codepen"></i></a>
                 <a href="https://www.instagram.com/pavblo.py/" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
                 <a href="#"><i class="fab fa-goodreads"></i></a>
@@ -38,13 +39,15 @@
 
         <main class="content">
             <section id="about">
-                <h2>About</h2>
-                <p><strong>Mechatronics Technician</strong> and <strong>Mechatronics Engineering</strong> student, currently focused on developing my <strong>skills</strong>, I am seeking to <strong>collaborate</strong> in <strong>teams</strong> and <strong>projects</strong> where I can provide <strong>tangible results</strong>.</p>
-                <p>I am a <strong>technology enthusiast</strong> and an <strong>organized professional</strong>, with an ability to <strong>adapt easily</strong> and a <strong>strong willingness to learn</strong>. I enjoy <strong>working in teams</strong> and providing <strong>support</strong> in any necessary <strong>task</strong> to make a <strong>meaningful contribution</strong>.</p>
+                <!-- <h2>About</h2> -->
                 <p>
-                    Technology professional with strong organizational skills and a high sense of responsibility. 
-                    Adaptable to new environments and committed to continuous learning. 
-                    Focused on providing effective support to generate meaningful impact in my area of expertise.
+                    Technology Consultant at EY, specializing in developing digital solutions with Power Platform and complementary technologies. I’m passionate about automation, efficiency, and continuous improvement, and I’m always eager to learn and contribute to dynamic, collaborative teams.<br><br>
+                </p>
+                <p>
+                    Currently, I focus on the design, development, and maintenance of data-driven solutions within the Power Platform ecosystem. My goal is to deliver customized solutions that follow best practices and meet the highest standards of quality.<br><br>
+                </p>
+                <p>
+                    In the past, I’ve had the opportunity to create solutions for the automotive industry and explore other fields such as infrastructure, networking, technical support, and DevOps. These experiences have given me a versatile background and a strong foundation for problem-solving across different technological areas.
                 </p>
             </section>
             <section id="experience">
@@ -66,8 +69,8 @@
                     <div class="experience-tech-stack">
                         <span class="tech-badge">Power BI</span>
                         <span class="tech-badge">Power Platform</span>
-                        <span class="tech-badge">Azure</span>
-                        <span class="tech-badge">Python</span>
+                        <span class="tech-badge">C#</span>
+                        <span class="tech-badge">TypeScript</span>
                     </div>
                 </div>
                 <div class="experience-card">
