--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <div class="experience-header">
                         <span class="experience-date">2023 – 2024</span>
                         <div class="experience-info">
-                            <h3 class="experience-title">IT Infrastructure Operations Technician</h3>
+                            <h3 class="experience-title">IT Infrastructure Operations Trainee</h3>
                             <span class="experience-company">
                                 <a href="https://www.opmobility.com/en/" target="_blank" rel="noopener noreferrer" class="experience-company" style="font-size: 0.95em; color: #61DAFB; text-decoration: none;">
                                     OP mobility ↗
@@ -153,7 +153,7 @@
             </section>
             <section id="projects">
                 <h2>Projects</h2>
-                <p>Listado de proyectos.</p>
+                <p>Building...</p>
             </section>
             
             <a href="/assets/resume.pdf" target="_blank" rel="noopener noreferrer" style="text-decoration: none;">
@@ -161,8 +161,8 @@
             </a>
             
             <section id="hobbies">
-                <h2>Hobbies</h2>
-                <p>Mis pasatiempos.</p>
+                <h2>Spare Time</h2>
+                <p>Building...</p>
             </section>
         </main>
     </div>
