update(bio) siderbar

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <aside class="sidebar">
             <h1>Pablo Garrido</h1>
             <h2>Technology Consultant</h2>
-            <p>I build accessible, data experiences for the enterprises.</p>
+            <p>Power Platform solutions and complementary technologies </p>
 
             <nav>
                 <ul>
