update(cv) drive link

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 </div>
             </section>
 
-            <a href="/assets/resume.pdf" target="_blank" rel="noopener noreferrer" class="experience-company" style="font-size: 0.95em; color: #61DAFB; text-decoration: none;">
+            <a href="https://drive.google.com/file/d/11QyY2difZLbdQoQKZqWzfjcry8-xIMzQ/view?usp=drive_link" target="_blank" rel="noopener noreferrer" class="experience-company" style="font-size: 0.95em; color: #61DAFB; text-decoration: none;">
                 <h2>View Full Resume</h2>
             </a>
             
